# Luma7

./: .gitignore  DESIGN.md  README.md
companion/: README.md
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_audio.c  app_audio.h  app_camera.c  app_camera.h  app_config.c  app_config.h  app_http.c  app_http.h  app_sse.c  app_sse.h  app_touch.c  app_touch.h  main.c
server/: README.md  config.default.yaml  pyproject.toml
server/luma7/: __main__.py  audio_utils.py  auth.py  config.py  logging.py  protocol.py
server/luma7/api/: app.py
server/luma7/models/: __init__.py  fastvlm.py  hub_cache.py  kokoro_mlx.py
server/luma7/pipeline/: __init__.py  engine.py  intent.py  kokoro_mlx_patch.py  llm.py  ocr.py  ocr_region.py  ocr_sections.py  sentence.py  session.py  stt.py  tts.py  tts_text.py  types.py
server/luma7/static/: app.js  index.html  style.css
server/scripts/: setup_models.sh  train_intent.py
server/tests/: test_ocr_sections.py
