[project]
name = "luma7-server"
version = "0.1.0"
description = "Vision Glasses intelligence server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "mlx-whisper>=0.4.0",
    "mlx-vlm>=0.6.2",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "ocrmac>=1.0.0",
    "mlx-audio>=0.4.0",
    "misaki>=0.7.0",
    "num2words>=0.5.0",
    "phonemizer>=3.0.0",
    "scipy>=1.11.0",
]

[project.scripts]
luma7-server = "luma7.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["luma7*"]
